# pyg-lib

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  pyproject.toml  readthedocs.yml  ruff.toml  setup.cfg  setup.py
.agents/skills/support-new-pytorch/: SKILL.md
.claude/skills/support-new-pytorch/: SKILL.md
.github/: CONTRIBUTING.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  installation.yml
.github/actions/setup/: action.yml
.github/workflows/: _build_docker.yml  _build_linux.yml  _build_macos.yml  _build_windows.yml  _building.yml  _test_gpu.yml  _upload_index.yml  automerge.yml  build.yml  building.yml  building_aki.yml  changelog.yml  codeql_analysis.yml  cpp_testing.yml  documentation.yml  gcov.yml  install.yml  labeler.yml  linting.yml  nightly.yml  nightly_legacy.yml  pull.yml  pull_request.yml  python_testing.yml  release.yml  stale.yml  testing.yml  update_index.yml
.github/workflows/aws/: generate_package_index.py  index.html  torch-1.11.0+cpu.html  torch-1.11.0+cu102.html  torch-1.11.0+cu113.html  torch-1.11.0+cu115.html  upload_final_index.py  upload_nightly_index.py
.github/workflows/cuda/: Linux-env.sh  Linux.sh  Windows-env.sh  Windows.sh  cu102-Linux-env.sh  cu102-Linux.sh  cu113-Linux-env.sh  cu113-Linux.sh  cu115-Linux-env.sh  cu115-Linux.sh
.github/workflows/docker/: Dockerfile  install_cuda.sh
.github/workflows/utils/: build.sh  build_linux.sh  build_macos.sh  build_windows.sh  full_matrix.json  full_matrix_linux.json  full_matrix_macos.json  full_matrix_windows.json  minimal_matrix.json  minimal_matrix_linux.json  minimal_matrix_macos.json  minimal_matrix_windows.json
LICENSE/: LICENSE_radix_sort
benchmark/: main.py
benchmark/classes/: hash_map.py
benchmark/csrc/ops/: matmul.cpp
benchmark/csrc/random/: rand_engine.cpp
benchmark/csrc/sampler/: mapper.cpp
benchmark/ops/: sampled.py  softmax.py  spline.py
benchmark/sampler/: hetero_neighbor.py  labor.py  neighbor.py  subgraph.py
cmake/: benchmark.cmake  test.cmake
docker/: Dockerfile  install_cuda.sh
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/modules/: nn.rst  ops.rst  partition.rst  root.rst  sampler.rst
examples/stable_abi/: MIGRATION.md  setup.py  test_stable_abi.py
examples/stable_abi/csrc/: ops.cpp
pyg_lib/: __init__.py  _compile.py  _triton.py  home.py  testing.py
pyg_lib/classes/: __init__.py
pyg_lib/csrc/: config.h  config.h.in  library.cpp  library.h  macros.h  pyg.cpp
pyg_lib/csrc/classes/: hash_map.cpp  hash_map.h  hash_map_impl.h
pyg_lib/csrc/classes/cpu/: hash_map.cpp  hash_map.h  hash_map_impl.cpp  hash_map_impl.h  neighbor_sampler.cpp  neighbor_sampler.h
pyg_lib/csrc/classes/cuda/: hash_map.cu  hash_map_impl.cu  hash_map_impl.cuh
pyg_lib/csrc/classes/hip/: hash_map_hip.cpp
pyg_lib/csrc/classes/rocm/: hash_map.hip
pyg_lib/csrc/messagequeue/: messagequeue_shm.cpp  messagequeue_shm.h  pybind_messagequeue_shm.cpp
pyg_lib/csrc/ops/: cluster.cpp  cluster.h  edge_sampler.cpp  edge_sampler.h  fps.cpp  fps.h  graclus.cpp  graclus.h  index_sort.cpp  index_sort.h  knn.cpp  knn.h  matmul.cpp  matmul.h  nearest.cpp  nearest.h  radius.cpp  radius.h  sampled.cpp  sampled.h  scatter.cpp  scatter.h  segment_coo.cpp  segment_coo.h  segment_csr.cpp  segment_csr.h  softmax.cpp  softmax.h  spline.cpp  spline.h  spmm.cpp  spmm.h  utils.h
pyg_lib/csrc/ops/autograd/: matmul_kernel.cpp  sampled_kernel.cpp  scatter_kernel.cpp  segment_coo_kernel.cpp  segment_csr_kernel.cpp  softmax_kernel.cpp  spline_kernel.cpp  spmm_kernel.cpp
pyg_lib/csrc/ops/cpu/: cluster_kernel.cpp  edge_sampler_kernel.cpp  fps_kernel.cpp  graclus_kernel.cpp  index_sort_kernel.cpp  knn_kernel.cpp  matmul_kernel.cpp  (+10 more)
pyg_lib/csrc/partition/: metis.cpp  metis.h
pyg_lib/csrc/sampler/: dist_merge_outputs.cpp  dist_merge_outputs.h  dist_neighbor.cpp  dist_neighbor.h  dist_relabel.cpp  dist_relabel.h  neighbor.cpp  neighbor.h  random_walk.cpp  random_walk.h  subgraph.cpp  subgraph.h
pyg_lib/csrc/segment/: matmul.cpp  matmul.h  segment_matmul.cpp  segment_matmul.h
pyg_lib/csrc/utils/: check.cpp  check.h  convert.cpp  convert.h  hetero_dispatch.h  types.h
pyg_lib/nn/: __init__.py  embedding_bag.py
pyg_lib/ops/: __init__.py  _scatter_reduce_triton.py  broadcast.py  scatter_reduce.py  softmax.py
pyg_lib/partition/: __init__.py
pyg_lib/sampler/: __init__.py
pyg_lib/segment/: __init__.py
pyg_lib/test/cpp/: test_cuda_version.cpp
test/: test_triton.py  test_version.py
test/classes/: test_hash_map.py  test_neighbor_sampler.py
test/cpp/: test_cuda_version.cpp
test/csrc/: graph.h  test_library.cpp
test/csrc/classes/: test_hash_map.cpp  test_neighbor_sampler.cpp
test/csrc/ops/: test_matmul.cpp  test_sampled.cpp  test_softmax.cpp
test/csrc/partition/: test_metis.cpp
test/csrc/random/: test_biased_random.cpp  test_rand_engine.cpp  test_randint.cpp
test/csrc/sampler/: test_dist_merge_outputs.cpp  test_dist_neighbor.cpp  test_dist_relabel.cpp  test_neighbor.cpp  test_neighbor_sample.py  test_random_walk.cpp  test_subgraph.cpp
test/csrc/segment/: test_matmul.cpp
test/csrc/utils/: test_utils.cpp
test/nn/: test_embedding_bag.py
test/ops/: test_broadcast.py  test_cluster.py  test_composite.py  test_cutlass_autograd_ops.py  test_edge_sampler.py  test_fps.py  test_graclus.py  test_index_sort.py  test_knn.py  test_knn_graph.py  test_matmul.py  test_matmul_ops.py  test_nearest.py  test_ops.py  test_radius.py  test_radius_graph.py  test_random_walk.py  test_scatter.py  test_scatter_reduce.py  test_segment_coo.py  test_segment_csr.py  test_softmax.py  test_spline.py  test_spline_conv.py  test_spmm.py
test/python/: test_autograd_matmul.py
test/sampler/: test_neighbor_sample.py
tools/: mkl_ver.py  prepare_for_build.sh  print_mkl_version.py  repair_wheel.sh  test_wheels.py
(+62 files in other folders)
