[build-system]
requires=["setuptools", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="pyg_lib"
authors=[
    {name="PyG Team", email="team@pyg.org"},
]
dynamic=["version", "dependencies"]
description="Low-Level Graph Neural Network Operators for PyG"
readme="README.md"
requires-python=">=3.10"
keywords=[
    "deep-learning",
    "pytorch",
    "geometric-deep-learning",
    "graph-neural-networks",
    "graph-convolutional-networks",
]
license="MIT"
license-files=["LICENSE*"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
homepage="https://pyg.org"
documentation="https://pyg-lib.readthedocs.io"
repository="https://github.com/pyg-team/pyg-lib.git"
changelog="https://github.com/pyg-team/pyg-lib/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
]

[tool.cibuildwheel]
build-frontend = {name = "build", args = ["--no-isolation"] }
test-command = "pytest {project}/test"

[tool.cibuildwheel.linux]
environment-pass = [
    "FORCE_NINJA",
    "FORCE_CUDA",
    "CUDA_HOME",
    "TORCH_CUDA_ARCH_LIST",
]
repair-wheel-command = """
auditwheel repair \
  --wheel-dir {dest_dir} {wheel} \
  --exclude 'libtorch*.so' \
  --exclude 'libc10*.so' \
  --exclude 'libgomp*.so*' \
  --exclude 'libcuda.so*'
"""

[tool.cibuildwheel.macos]
repair-wheel-command = """
delocate-wheel \
  --require-archs {delocate_archs} \
  --wheel-dir {dest_dir} {wheel} \
  --exclude libtorch.dylib \
  --exclude libtorch_cpu.dylib \
  --exclude libc10.dylib \
  --exclude libomp.dylib
"""

[tool.pytest.ini_options]
addopts=[
    "--capture=no",
    "--ignore=third_party",
    "--color=yes",
    "-vv",
]

[tool.flake8]
exclude=["third_party", "build"]
extend-ignore = ["E203"]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
skip=[".gitignore", "__init__.py"]

[tool.ruff]
src=["pyg_lib"]
line-length=79
indent-width=4
target-version="py310"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    "D",  # pydocstyle
    "I",  # isort
    "COM812",  # missing-trailing-comma
]
ignore=[
    "D100",  # TODO Don't ignore "Missing docstring in public module"
    "D101",  # TODO Don't ignore "Missing docstring in public class"
    "D102",  # TODO Don't ignore "Missing docstring in public method"
    "D103",  # TODO Don't ignore "Missing docstring in public function"
    "D104",  # TODO Don't ignore "Missing docstring in public package"
    "D105",  # Ignore "Missing docstring in magic method"
    "D107",  # Ignore "Missing docstring in __init__"
    "D205",  # Ignore "blank line required between summary line and description"
]

[tool.ruff.format]
quote-style="single"

[tool.ruff.lint.pydocstyle]
convention="google"

[tool.ruff.lint.isort]
known-first-party = ["pyg_lib"]
