[metadata]
long_description=file: README.md
long_description_content_type=text/markdown

classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only

[tool:pytest]
testpaths=test
addopts=--capture=no --ignore=third_party --color=yes -vv

[flake8]
exclude=
    third_party
    build

[isort]
multi_line_output=3
include_trailing_comma=True
skip=.gitignore,__init__.py
